[gd_scene load_steps=6 format=3 uid="uid://dh615axbfecwo"]

[ext_resource type="Texture2D" uid="uid://bddlumku0hnt0" path="res://assets/placeholder_sprites/item_plceholder.png" id="1_3utgo"]
[ext_resource type="Script" path="res://scenes/ui/inventory_ui/item_information.gd" id="1_f6ncd"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xrj6m"]
bg_color = Color(0.6, 0.6, 0.6, 0)
shadow_color = Color(0, 0, 0, 0.380392)
shadow_size = 10
shadow_offset = Vector2(0, 10)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_uj2eb"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_4fwlt"]

[node name="ItemInformation" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_f6ncd")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 150
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 150
theme_override_constants/margin_bottom = 50

[node name="PanelContainerShadow" type="PanelContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_xrj6m")

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/PanelContainerShadow"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainerShadow/PanelContainer"]
layout_mode = 2

[node name="MarginIcon" type="MarginContainer" parent="MarginContainer/PanelContainerShadow/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="IconTexture" type="TextureRect" parent="MarginContainer/PanelContainerShadow/PanelContainer/VBoxContainer/MarginIcon"]
unique_name_in_owner = true
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
texture = ExtResource("1_3utgo")
stretch_mode = 5

[node name="MarginLabel" type="MarginContainer" parent="MarginContainer/PanelContainerShadow/PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/PanelContainerShadow/PanelContainer/VBoxContainer/MarginLabel"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/PanelContainerShadow/PanelContainer/VBoxContainer/MarginLabel/PanelContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_vertical = 1
text = "LoremIpsum LoremIpsum LorLoremIpsum LoremIpsum LorLoremIpsum LoremIpsum LorLoremIpsum LoremIpsum LorLoremIpsum LoremIpsum LorLoremIpsum LoremIpsum LorLoremIpsum LoremIpsum Lor"
autowrap_mode = 2

[node name="HSeparator" type="HSeparator" parent="MarginContainer/PanelContainerShadow/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/separator = SubResource("StyleBoxEmpty_uj2eb")

[node name="MarginButtons" type="MarginContainer" parent="MarginContainer/PanelContainerShadow/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/PanelContainerShadow/PanelContainer/VBoxContainer/MarginButtons"]
layout_mode = 2
size_flags_vertical = 3

[node name="UseButton" type="Button" parent="MarginContainer/PanelContainerShadow/PanelContainer/VBoxContainer/MarginButtons/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 4.14
text = "USE	"

[node name="VSeparator" type="VSeparator" parent="MarginContainer/PanelContainerShadow/PanelContainer/VBoxContainer/MarginButtons/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/separator = SubResource("StyleBoxEmpty_4fwlt")

[node name="CloseButton" type="Button" parent="MarginContainer/PanelContainerShadow/PanelContainer/VBoxContainer/MarginButtons/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 4.14
text = "CLOSE"

[connection signal="pressed" from="MarginContainer/PanelContainerShadow/PanelContainer/VBoxContainer/MarginButtons/HBoxContainer/UseButton" to="." method="_on_use_button_pressed"]
[connection signal="pressed" from="MarginContainer/PanelContainerShadow/PanelContainer/VBoxContainer/MarginButtons/HBoxContainer/CloseButton" to="." method="_on_close_button_pressed"]
